deployments/local-group/network-policies/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: local-group-network
spec:
  podSelector:
    matchLabels:
      local-group: "true"
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          local-group: "true"
    ports:
    - protocol: TCP
  egress:
  - to:
    - podSelector:
        matchLabels:
          local-group: "true"
    ports:
    - protocol: TCP
  - to:
    - namespaceSelector:
        matchLabels:
          name: central-services
    ports:
    - protocol: TCP
